@startuml Composite_Pattern_Raph
title Composite Pattern - Sociétés et Filiales

package "Composite Pattern" {
  abstract class Client {
    + getChiffreAffaireTotal() : Double
    + {abstract} calculerCA() : Double
  }
  
  class Societe {
    - filiales : List<Client>
    + ajouterFiliale(Client)
    + supprimerFiliale(Client)
    + getChiffreAffaireTotal() : Double
    + getNombreFiliales() : Integer
  }
  
  class Particulier {
    + getChiffreAffaireTotal() : Double
  }
}

' Relations
Client <|-- Societe
Client <|-- Particulier
Societe o-- "*" Client : filiales

' Notes
note right of Client
  <b>Component</b>
  Interface commune pour
  clients simples et composites
end note

note right of Societe
  <b>Composite</b>
  Peut contenir d'autres
  clients (filiales)
end note

note right of Particulier
  <b>Leaf</b>
  Client simple sans
  sous-composants
end note

' Exemple d'utilisation
class ExempleUtilisation {
  + main()
}

ExempleUtilisation ..> Societe : utilise

@enduml
